feat: Integrate CodeMirror for enhanced code editing
Introduces CodeMirror as the new code editor component, replacing the basic textarea. This change brings features like syntax highlighting for Python, CSS, HTML, and Markdown, along with theme customization and better formatting capabilities.

The integration involves:
- Adding CodeMirror and language extensions as project dependencies.
- Updating the `index.html` to include necessary CSS and import map entries.
- Refactoring `CodeEditor.tsx` to utilize the `react-codemirror` component and its associated extensions.
- Enhancing the `constants.ts` and `pyodideService.ts` to support Pyodide's build script and environment caching.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "react": "^19.2.3",
     "@google/genai": "^1.38.0",
     "lucide-react": "^0.562.0",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "@uiw/react-codemirror": "4.23.6",
+    "@codemirror/lang-python": "6.1.4",
+    "@codemirror/lang-css": "6.2.1",
+    "@codemirror/lang-html": "6.4.8",
+    "@codemirror/lang-markdown": "6.2.4",
+    "@uiw/codemirror-theme-vscode": "4.23.6",
+    "dompurify": "3.0.8"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
